--- a/Eindopdracht/app/src/main/res/layout/activity_list.xml
+++ b/Eindopdracht/app/src/main/res/layout/activity_list.xml
@@ -4,14 +4,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:divider="?android:dividerHorizontal"
     android:fitsSystemWindows="true"
+    android:showDividers="middle"
     tools:context=".ListActivity">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:theme="@style/AppTheme.AppBarOverlay">
-    </android.support.design.widget.AppBarLayout>
+        android:theme="@style/AppTheme.AppBarOverlay"></android.support.design.widget.AppBarLayout>
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar"
@@ -22,12 +23,35 @@
 
     <ListView
         android:id="@+id/listView"
-        android:layout_marginTop="60dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_marginTop="120dp"
         android:layout_weight="1" />
 
-    <include layout="@layout/content_list" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="60dp"
+        android:layout_weight="0"
+        android:orientation="horizontal">
 
+        <EditText
+            android:id="@+id/editText"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:hint="Mijn device" />
+
+        <Button
+            android:id="@+id/button"
+            style="?android:attr/buttonStyleSmall"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="0"
+            android:text="Add item"
+            android:onClick="addListItem"/>
+    </LinearLayout>
+
+    <include layout="@layout/content_list" />
 
 </android.support.design.widget.CoordinatorLayout>
